--- a/backcode/apitest/pom.xml
+++ b/backcode/apitest/pom.xml
@@ -55,7 +55,12 @@
             <version>1.2.62</version>
         </dependency>
 
-
+        <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.11.3</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
